# db-introspector-gadget

./: .gitignore  Cargo.toml  LICENSE  README.md
sample-output/rfam/: README.md  table_types.py
sample-output/rna-central/: README.md  table_types.py
src/: db_introspector.rs  main.rs  python_type_file_writer.rs  python_types.rs
