[package]
name = "db-introspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
convert_case = "0.6.0"
itertools = "0.11.0"
sqlx = { version = "0.7.1", features = ["mysql", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.32.0", features = ["full"] }
