[package]
name = "db-introspector-gadget"
version = "0.1.0"
edition = "2021"
authors = ["Ses <jsesgoe@gmail.com>"]
description = "A MySql and Postgres database introspection tool that generates Python types"
repository = "https://github.com/sesgoe/introspector-gadget"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.22", features = ["derive"] }
convert_case = "0.6.0"
indoc = "2.0.3"
itertools = "0.11.0"
sqlx = { version = "0.7.1", features = ["mysql", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.32.0", features = ["full"] }
